@@ -1,21 +1,19 @@
 package my_sawit.authentication_manajemen_akun.internal.controller;
 
-import my_sawit.authentication_manajemen_akun.dto.response.UserResponseDTO;
 import my_sawit.authentication_manajemen_akun.admin.service.AdminService;
+import my_sawit.authentication_manajemen_akun.dto.response.ApiResponse;
+import my_sawit.authentication_manajemen_akun.dto.response.PagingResponseDTO;
+import my_sawit.authentication_manajemen_akun.dto.response.UserResponseDTO;
+import my_sawit.authentication_manajemen_akun.security.JwtUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-
 import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
-import my_sawit.authentication_manajemen_akun.security.JwtUtils;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
+import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -24,9 +22,10 @@ import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest(InternalController.class)
+@WebMvcTest(InternalController.class)
 @AutoConfigureMockMvc(addFilters = false)
 class InternalControllerTest {
 
@@ -55,10 +54,15 @@ class InternalControllerTest {
 
     @Test
     void searchUsers_HappyPath_ReturnsData() throws Exception {
-        Page<UserResponseDTO> mockPage = new PageImpl<>(List.of(mockUser), PageRequest.of(0, 10), 1);
+        PagingResponseDTO<UserResponseDTO> pagingData = PagingResponseDTO.<UserResponseDTO>builder()
+                .content(List.of(mockUser))
+                .currentPage(0)
+                .totalPages(1)
+                .totalElements(1)
+                .build();
 
         when(adminService.searchUsers(any(), any(), any(), anyInt(), anyInt()))
-                .thenReturn(mockPage);
+                .thenReturn(ApiResponse.success("Successfully fetched users list", pagingData));
 
         mockMvc.perform(get("/internal/user/search")
                         .param("name", "Evan")
@@ -67,7 +71,7 @@ class InternalControllerTest {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.statusCode").value(200))
-                .andExpect(jsonPath("$.message").value("Berhasil mengambil daftar pengguna"))
+                .andExpect(jsonPath("$.message").value("Successfully fetched users list"))
                 .andExpect(jsonPath("$.data.content").isArray())
                 .andExpect(jsonPath("$.data.content[0].username").value("Evan Haryo"))
                 .andExpect(jsonPath("$.data.totalElements").value(1));
@@ -75,17 +79,22 @@ class InternalControllerTest {
 
     @Test
     void searchUsers_HappyPath_ReturnsEmptyMessage() throws Exception {
-        Page<UserResponseDTO> emptyPage = new PageImpl<>(Collections.emptyList(), PageRequest.of(0, 10), 0);
+        PagingResponseDTO<UserResponseDTO> pagingData = PagingResponseDTO.<UserResponseDTO>builder()
+                .content(List.of())
+                .currentPage(0)
+                .totalPages(0)
+                .totalElements(0)
+                .build();
 
         when(adminService.searchUsers(any(), any(), any(), anyInt(), anyInt()))
-                .thenReturn(emptyPage);
+                .thenReturn(ApiResponse.success("No users fetched", pagingData));
 
         mockMvc.perform(get("/internal/user/search")
                         .param("name", "OrangTidakDikenal")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.statusCode").value(200))
-                .andExpect(jsonPath("$.message").value("No users fetched")) // Validasi logika ternary if
+                .andExpect(jsonPath("$.message").value("No users fetched"))
                 .andExpect(jsonPath("$.data.content").isEmpty())
                 .andExpect(jsonPath("$.data.totalElements").value(0));
     }
@@ -97,12 +106,15 @@ class InternalControllerTest {
 
         mockMvc.perform(get("/internal/user/search")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.statusCode").value(400))
+                .andExpect(jsonPath("$.message").value("Database timeout"));
     }
 
     @Test
     void getUserDetail_HappyPath_ReturnsUser() throws Exception {
-        when(adminService.getUserDetail(eq(mockUserId))).thenReturn(mockUser);
+        when(adminService.getUserDetail(eq(mockUserId)))
+                .thenReturn(ApiResponse.success("Berhasil mengambil detail pengguna", mockUser));
 
         mockMvc.perform(get("/internal/user/{userId}", mockUserId)
                         .contentType(MediaType.APPLICATION_JSON))
@@ -130,6 +142,8 @@ class InternalControllerTest {
 
         mockMvc.perform(get("/internal/user/{userId}", randomId)
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.statusCode").value(400))
+                .andExpect(jsonPath("$.message").value("User tidak ditemukan"));
     }
 }
